--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<Title>An Empty Web Page</Title>
 	</head>
 	<body>
-		<h1>web page is blank</h1>
+		<h1 style="color:blue">web page is blank</h1>
 		<h2>(well, empty blank, anyway!</h2>
 	</body>
 	
