--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1 style="color:blue">web page is blank</h1>
-		<h2>(well, empty blank, anyway!</h2>
+		<h2 style="color:red">(well, empty blank, anyway!</h2>
 	</body>
 	
 </html>
