--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<Title>An Empty Web Page</Title>
+		<Title>My Page of Quotes</Title>
 	</head>
 	<body>
 		<h1 style="color:blue">web page is blank</h1>
