--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<Title>My Page of Quotes</Title>
+		<Link href="styles.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
 		<h1 style="color:blue">web page is blank</h1>
