--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h1 style="color:blue">web page is blank</h1>
 		<h2 style="color:Purple">(well, empty blank, anyway!</h2>
 		<ul>
-			<li></li>
+			<li>"With great power comes great responsabillity." --Uncle Ben Parker</li>
 			<li></li>
 		</ul>
 	</body>
