--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<Link href="styles.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
-		<h1 style="color:blue">web page is blank</h1>
-		<h2 style="color:Purple">(well, empty blank, anyway!</h2>
+		<h1>web page is blank</h1>
+		<h2>(well, empty blank, anyway!</h2>
 		<ul>
 			<li>"With great power comes great responsabillity." --Uncle Ben Parker</li>
 			<li></li>
