added quote by yogi

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h2>(well, empty blank, anyway!</h2>
 		<ul>
 			<li>"With great power comes great responsabillity." --Uncle Ben Parker</li>
-			<li></li>
+			<li>the american master of tautology the lot by watching</li>
 		</ul>
 	</body>
 	
