--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<ul>
 			<li>"With great power comes great responsabillity." --Uncle Ben Parker</li>
 			<li>the american master of tautology the lot by watching</li>
+			<li>talk is cheap show me the code </li>
 		</ul>
 	</body>
 	
