Eric raymond quote

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<li>talk is cheap show me the code </li>
 			<li>1 </li>
 			<li>2 </li>
+			<li>"Every good work of sofware starts by scratching a developer's personal itch" Eric Raymond</li>
 		</ul>
 	</body>
 	
