--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<li>1 </li>
 			<li>2 </li>
 			<li>"Every good work of sofware starts by scratching a developer's personal itch" Eric Raymond</li>
+			<li>"Never tell me the odds" Han Solo</li>
 		</ul>
 	</body>
 	
