--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 			<li>2 </li>
 			<li>"Every good work of sofware starts by scratching a developer's personal itch" Eric Raymond</li>
 			<li>"Never tell me the odds" Han Solo</li>
+			<li>Example you know far aoutweighs precepts" Tomas</li>
+			<li>"I love deadlines I love the whooshing sound" Douglas</li>
+			<li>A man is but the product of his thougth" Mahatma Gahndy</li>
 		</ul>
 	</body>
 	
