added Kermit and Chartier quotes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 			<li>Example you know far aoutweighs precepts" Tomas</li>
 			<li>"I love deadlines I love the whooshing sound" Douglas</li>
 			<li>A man is but the product of his thougth" Mahatma Gahndy</li>
+			<li>"Nothing is more dangerous as an idea one we have" Emile Chartier</li>
+			<li>"Life like a movy " Kermit the frog</li>
 		</ul>
 	</body>
 	
