Quote mark twain

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<h1>web page is blank</h1>
 		<h2>(well, empty blank, anyway!</h2>
 		<ul>
+			<li>you can't depend on you eyes when your imagination is out fouc" Mark Twain </li>
 			<li>"With great power comes great responsabillity." --Uncle Ben Parker</li>
 			<li>the american master of tautology the lot by watching</li>
 			<li>talk is cheap show me the code </li>
