changed fisrt header to 'A page of quotation'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<Link href="styles.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
-		<h1>web page is blank</h1>
+		<h1>A Page of Quotations</h1>
 		<h2>(well, empty blank, anyway!</h2>
 		<ul>
 			<li>you can't depend on you eyes when your imagination is out fouc" Mark Twain </li>
