changed second header to For your reading pleasure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>A Page of Quotations</h1>
-		<h2>(well, empty blank, anyway!</h2>
+		<h2>...For your reading pleasure</h2>
 		<ul>
 			<li>you can't depend on you eyes when your imagination is out fouc" Mark Twain </li>
 			<li>"With great power comes great responsabillity." --Uncle Ben Parker</li>
