added Spock quote

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<li>A man is but the product of his thougth" Mahatma Gahndy</li>
 			<li>"Nothing is more dangerous as an idea one we have" Emile Chartier</li>
 			<li>"Life like a movy " Kermit the frog</li>
+			<li>Live long and proper S'CHNT' GAI Spock</li>
 		</ul>
 	</body>
 	
