Yogi Berra quote

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<li>"Nothing is more dangerous as an idea one we have" Emile Chartier</li>
 			<li>"Life like a movy " Kermit the frog</li>
 			<li>Live long and proper S'CHNT' GAI Spock</li>
+			<li>"It ain't over till ist's over" Yogi Berra</li>
 		</ul>
 	</body>
 	
